--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+}
+
 .section-100 {
   width: 100%;
   height: 100vh;
@@ -18,7 +22,7 @@
 .container {
   width: 100%;
   height: 100vh;
-  padding: 50px;
+  padding: 50px 100px;
   position: relative;
 }
 
@@ -31,12 +35,87 @@
   z-index: 1000;
 }
 
+.header.active {
+  box-shadow: 0 5px 20px rgba(121, 255, 202, 0.2);
+}
+
 .header-container {
   width: 100%;
-  padding: 20px 50px;
+  padding: 20px 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: #000;
 }
 
+.toggle {
+  width: 40px;
+  height: 40px;
+  background: url("../img/menu.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 30px;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.toggle.active {
+  background: url("../img/close.png");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 25px;
+  cursor: pointer;
+}
 /* header END */
+
+/* sidemenu */
+.sidemenu {
+  position: fixed;
+  min-height: 100vh;
+  width: 30%;
+  top: 0;
+  right: -100%;
+  background-color: #000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 101;
+  transition: 0.8s;
+  box-shadow: 0 5px 20px rgba(121, 255, 202, 0.2);
+}
+
+.sidemenu.active {
+  right: 0;
+}
+
+.sidemenu ul li {
+  margin-bottom: 18px;
+  padding: 10px 20px;
+  border: 1px solid #000;
+  transition: 0.5s;
+}
+
+.sidemenu ul li a {
+  color: #79ffca;
+  font-size: 2em;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.sidemenu ul li:hover {
+  border: 1px solid #d1d1d1;
+  box-shadow: 0 5px 20px rgba(255, 255, 255, 0.5);
+}
+
+.sidemenu ul li:hover a {
+  color: #d1d1d1;
+}
+/* sidemenu END */
+
+/* hero section */
+.count-down-timer {
+  width: 100%;
+  height: 100px;
+  background-color: grey;
+}
+/* hero section END */
