--- a/css/style.css
+++ b/css/style.css
@@ -76,9 +76,11 @@ a {
   left: 0;
   width: 100%;
   z-index: 1000;
+  transition: 0.5s;
 }
 
-.header.active {
+.header.sticky {
+  background-color: #0d022c;
   box-shadow: 0 5px 20px rgba(121, 255, 202, 0.2);
 }
 
@@ -213,16 +215,38 @@ a {
 
 .count-down-timer {
   width: 100%;
-  height: 100px;
   background-color: #1b0c57;
   padding: 20px;
   border-radius: 10px;
+  box-shadow: -5px -5px 0px #b30561, 5px 5px 0px #10a9bf;
+  margin-bottom: 30px;
+  margin-top: 10px;
 }
 
 .count-down-timer h5 {
   font-size: 24px;
   color: #fff;
   text-align: center;
+  margin-bottom: 24px;
+}
+
+.clock {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.time {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 20px;
+}
+
+.time small {
+  color: #fff;
 }
 
 .orc {
@@ -363,6 +387,87 @@ footer {
   background-color: #0d022c;
 }
 
+.footer-container {
+  width: 100%;
+  padding: 100px 100px 20px;
+  position: relative;
+}
+
+.footer-row-1 {
+  width: 100%;
+  position: relative;
+}
+
+.footer-box-outer {
+  width: 80%;
+  left: 50%;
+  transform: translateX(-50%);
+  position: absolute;
+  bottom: 10px;
+  height: 300px;
+  padding: 0;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 30px 10px 30px 10px;
+  box-shadow: 10px 20px 25px rgba(0,0,0,0.7);
+  border: none;
+  overflow: hidden;
+}
+
+.footer-box-outer-part-1,
+.footer-box-outer-part-2 {
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.footer-box-outer-part-1 {
+  width: 66%;
+  height: 100%;
+}
+
+.footer-box-outer-part-1 h4 {
+  color: #b30561;
+  font-size: 30px;
+  margin-bottom: 12px;
+}
+
+.footer-box-outer-part-1 ul {
+  margin-bottom: 12px;
+}
+
+.footer-box-outer-part-1 ul li {
+  font-size: 18px;
+}
+
+.footer-box-outer-part-1 h5 {
+  color: #b30561;
+  font-size: 24px;
+}
+
+.footer-box-outer-part-2 {
+  color: #fff;
+}
+
+.footer-box-outer-part-2 i {
+  font-size: 72px;
+  margin-bottom: 30px;
+}
+
+.footer-box-outer-part-2 h5 {
+  font-size: 30px;
+}
+
+.footer-box-outer-part-2 {
+  width: 34%;
+  height: 100%;
+  background-color: #1b0c57;
+}
+
 .footer-box-1 {
   display: flex;
   justify-content: center;
@@ -407,7 +512,7 @@ footer {
   position: absolute;
   bottom: -6px;
   left: 0px;
-  width: 50%;
+  width: 80%;
   height: 3px;
   background-color: #b30561;
 }
