--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-@font-face {
-   font-family: 'Montserrat' ;
-   src: url('../fonts/Montserrat-Regular.ttf') format('truetype');
-}
-
 
 /*
 colors:
@@ -14,6 +9,8 @@ blue: #1b0c57;
 dark-blue: #0d022c;
 
 purple: #470175;
+
+live-red:  #ff0f0f;
 */
 
 * {
@@ -237,6 +234,10 @@ a {
   align-items: center;
 }
 
+.clock.not-visible {
+  display: none;
+}
+
 .time {
   display: flex;
   justify-content: center;
@@ -249,6 +250,20 @@ a {
   color: #fff;
 }
 
+.live-info {
+  width: 100%;
+  text-align: center;
+  font-size: 4em;
+  color: #ff0f0f;
+  font-weight: 800;
+  margin-bottom: 24px;
+  display: none;
+}
+
+.live-info.live {
+  display: block;
+}
+
 .orc {
   position: absolute;
   right: 30%;
@@ -258,19 +273,7 @@ a {
   z-index: 900
 }
 
-.monster-can {
-  position: absolute;
-  left: 30%;
-  transform: translateX(-30%);
-  bottom: -120px;
-  width: 300px;
-  z-index: 890;
-
-  display: none;
-}
-
-.orc img,
-.monster-can img {
+.orc img {
   width: 100%;
   height: 100%;
 }
@@ -284,6 +287,23 @@ a {
 .container h2 {
   color: #fff;
   font-size: 24px;
+}
+
+.section-title h2 {
+  font-size: 38px;
+  font-weight: 700;
+}
+
+.rotated-subtitle {
+  color: #B30561;
+  font-weight: 400;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+
+  position: absolute;
+  transform: rotate(270deg);
+  left: 50px;
+  top: 250px;
 }
 /* schedule section END */
 
@@ -365,6 +385,10 @@ a {
   margin-bottom: 24px;
 }
 
+.icons p {
+  color: #fff;
+}
+
 .icons ul li {
   display: inline-block;
   margin: 24px;
@@ -432,8 +456,9 @@ footer {
 
 .footer-box-outer-part-1 h4 {
   color: #b30561;
-  font-size: 30px;
   margin-bottom: 12px;
+  font-size: 38px;
+  font-weight: 700;
 }
 
 .footer-box-outer-part-1 ul {
