--- a/css/style.css
+++ b/css/style.css
@@ -275,7 +275,10 @@ a {
   transform: translateX(30%);
   bottom: -120px;
   width: 600px;
-  z-index: 900
+  z-index: 900;
+  transition: 0.1s;
+
+  animation: 3s breathing infinite;
 }
 
 .orc img {
@@ -766,6 +769,20 @@ footer {
 }
 /* footer END */
 
+/* animations */
+@keyframes breathing {
+
+  0% {
+    bottom: -120px;
+  }
+  50% {
+    bottom: -126px;
+  }
+  100% {
+    bottom: -120px;
+  }
+}
+
 /* media queries */
 @media (max-width:1600px){
   .orc {
@@ -1110,6 +1127,10 @@ footer {
     right: -80px;
     bottom: -240px;
   }
+
+  .time {
+    padding: 10px;
+  }
 }
 
 @media (max-width:325px){
@@ -1121,7 +1142,4 @@ footer {
     font-size: 18px;
   }
 
-  .time {
-    padding: 10px;
-  }
 }
